--- a/src/Makefile
+++ b/src/Makefile
@@ -5,25 +5,24 @@ endif
 # Set compiler to g++
 CXX=g++
 LDFLAGS = -lm -lzm -lgmp -lgmpxx -L../../ate-pairing/lib
-CFLAGS= -g -O2 -m64
+CFLAGS= -g -O2 -m64 -std=c++11 -stdlib=libc++
 TARGET= ../lib/libbls.a
 
 all: $(TARGET)
-	make clean # force recompile
+	# make clean # force recompile
 	make ../lib/libbls.a
 
 # TODO: This archive not currently used
 ../lib/libbls.a: sha256.o bls.o
-	rm -f $@
+	# rm -f $@
 	ar -r $@ $^
 
 sha256.o: sha256.cpp
-	$(CXX) -c sha256.cpp -I../include/
+	$(CXX) $(CFLAGS) -c sha256.cpp -I../include/
 
 bls.o: bls.cpp
-	$(CXX) -c bls.cpp -I../include -I../../xbyak -I../../ate-pairing/include
+	$(CXX) $(CFLAGS) -c bls.cpp -I../include -I../../xbyak -I../../ate-pairing/include
 
 clean:
 	rm *.o
 	rm -f $(TARGET)
-
